creates myfile.md

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-        <h2>Sup</h2>
+    <script src="script.js"></script>
+
+    <img src = "https://slm-assets.secondlife.com/assets/8765814/view_large/fluffy.jpg?1384827520">
       </body>
 </html>
